--- a/index.html
+++ b/index.html
@@ -128,8 +128,8 @@
             </div>
         </div>
     </div>
-    <!-- <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.js">
-    </script> -->
+    <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.js">
+    </script>
     <script src="script.js"></script>
 </body>
 
