--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             </div>
             <div class="video-container">
                 <video autoplay loop muted
-                    src="./invideo-ai-1080 Elevate Your Job Search_ The Power of Sm 2024-01-13.mp4"></video>
+                    src="WhatsApp Video 2024-01-13 at 16.40.20_a8c1d39e.mp4"></video>
             </div>
             <div class="moving-text-container">
                 <div class="moving-text">
