--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 </div>
                 <div id="nav-button">
                     <h4><a href="./index.html">Home</a></h4>
-                    <h4><a href="./mainpage.html">Try</a></h4>
+                    <h4><a href="./mainpage.html" target="_blank">Try</a></h4>
                     <h4><a href="#contact-info">Contact</a></h4>
                     <h4><a href="#homepage-feedback">Feedback</a></h4>
                 </div>
@@ -37,7 +37,9 @@
                     skill set.
                 </div>
                 <div class="right-text">
-                    <h1>JOB <br> MATCH <br> MAKING</h1>
+                    <h1>JOB </h1>
+                    <h1> MATCH </h1>
+                    <h1> MAKING</h1>
                 </div>
             </div>
             <hr>
@@ -48,7 +50,7 @@
             </div>
             <div class="video-container">
                 <video autoplay loop muted
-                    src="WhatsApp Video 2024-01-13 at 16.40.20_a8c1d39e.mp4"></video>
+                    src="./invideo-ai-1080 Elevate Your Job Search_ The Power of Sm 2024-01-13.mp4"></video>
             </div>
             <div class="moving-text-container">
                 <div class="moving-text">
@@ -130,6 +132,9 @@
     </div>
     <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.js">
     </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"
+        integrity="sha512-7eHRwcbYkK4d9g/6tD/mhkf++eoTHwpNM9woBxtPUBWm67zeAfFC+HrdoE2GanKeocly/VxeLvIqwvCdk7qScg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="script.js"></script>
 </body>
 
