--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                     step in your career journey.
                 </div>
                 <div class="container-2-right-img">
-                    <img src="./Man_looking_at_system.jpg" alt="Man searching for job">
+                    <img src="./WhatsApp Video 2024-01-13 at 16.40.20_a8c1d39e.mp4" alt="Man searching for job">
                 </div>
             </div>
             <div class="back-animation-container-3">
