--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             </div>
             <div class="video-container">
                 <video autoplay loop muted
-                    src="./invideo-ai-1080 Elevate Your Job Search_ The Power of Sm 2024-01-13.mp4"></video>
+                    src="WhatsApp Video 2024-01-13 at 16.40.20_a8c1d39e.mp4"></video>
             </div>
             <div class="moving-text-container">
                 <div class="moving-text">
@@ -78,7 +78,7 @@
                     step in your career journey.
                 </div>
                 <div class="container-2-right-img">
-                    <img src="./WhatsApp Video 2024-01-13 at 16.40.20_a8c1d39e.mp4" alt="Man searching for job">
+                    <img src="Man_looking_at_system.jpg" alt="Man searching for job">
                 </div>
             </div>
             <div class="back-animation-container-3">
